@@ -1,3 +1,8 @@
+Mon May 17 2013 18:11 - v1.3 Features
+
+   Allow passing own answers
+   Allow making answers consistent (thanks Mark A. Smith)
+
 Wed Oct 15 2008 23:30 - v1.2 @ rather than $#
 
    Fix bug http://rt.cpan.org/Ticket/Display.html?id=40080
